2007-07-01  Hector E. Gomez Morales <hectoregm@gmail.com> 

	

2007-06-29  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added a padding between
	  empty elements.
	* Monodoc.Editor.Gui/DocumentTagTable.cs: Added almost all the tags
	  that represents elements and attributes used by monodoc.

2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Using
	  IsSerializableText property for conditional.
	* Monodoc.Editor.Gui/DocumentTag.cs: Added a property named
	  IsSerializableText.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/EditorWindow.cs: Added handlers for Save and SaveAs
	  actions.
	* Monodoc.Editor/Monodoc.Editor.mdp,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.SaveDocDialog.cs,
	  Monodoc.Editor/gtk-gui/gui.stetic, Monodoc.Editor/SaveDocDialog.cs:
	  Added two new actions: Save and Save As. Added a new dialog for
	  Save As action.
	* Monodoc.Editor/OpenDocDialog.cs: Whitespace changes.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/OpenDocDialog.cs: Minor change.
	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: More changes to
	  Serialize method.

2007-06-19  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/Monodoc.Editor.mdp,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  Monodoc.Editor.Gui/DocumentTagTable.cs,
	  Monodoc.Editor/gtk-gui/gui.stetic: Changed to Property Editable to
	  false in DocumentEditor, maybe add it directly to constructor.

2007-06-19  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added initial
	  implementation of the serialize methods and added 3 more helper
	  methods to deserialize attributes.
	* Monodoc.Editor.Gui/DocumentTagTable.cs: Deleted extra Editable
	  properties that are not needed.
